objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(TODAY()  - Date_of_Birth__c) / 365.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>This field is for Birth Date</description>
        <inlineHelpText>Birth date</inlineHelpText>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emp_Id__c</fullName>
        <description>Field for employess ID</description>
        <displayFormat>Emp-{00000}</displayFormat>
        <inlineHelpText>Employees id</inlineHelpText>
        <label>Emp Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <label>Specialization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>ECE</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Mech</fullName>
                </value>
                <value>
                    <fullName>Agri</fullName>
                </value>
                <value>
                    <fullName>Petrolium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>